<resources>
    <string name="app_name">CS3270MI Pickle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight_in_pounds">Weight in Pounds</string>
    <string name="zero">0</string>
    <string name="height_in_inches">Height in Inches</string>
    <string name="age">Age</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="calculate">CALCULATE</string>
    <string name="body_mass_index">Body Mass Index</string>
    <string name="body_fat_percentage">Body Fat Percentage</string>
</resources>
