<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:orientation="vertical"
    tools:context="com.cmpickle.cs3270mi.ResultsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="textEnd"
            android:text="@string/body_mass_index"/>

        <TextView
            android:id="@+id/body_mass_index_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="20dp"
            android:paddingEnd="30dp"
            android:textAlignment="textEnd"
            android:text="@string/zero"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="textEnd"
            android:text="@string/body_fat_percentage"/>

        <TextView
            android:id="@+id/body_fat_percentage_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="20dp"
            android:paddingEnd="30dp"
            android:textAlignment="textEnd"
            android:text="@string/zero"/>
    </LinearLayout>

</LinearLayout>
